[gd_scene load_steps=11 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Pipes.gd" type="Script" id=2]
[ext_resource path="res://Box.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 40 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 208 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 152 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 257, 10 )

[node name="Main" type="Node2D"]
position = Vector2( -112, -96 )

[node name="PipeNode" type="Node2D" parent="."]
position = Vector2( 640, 288 )
__meta__ = {
"_edit_group_": true
}

[node name="Pipes" type="StaticBody2D" parent="PipeNode"]
script = ExtResource( 2 )

[node name="UpPipeSprite" type="Sprite" parent="PipeNode/Pipes"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="UpPipeColl" type="CollisionShape2D" parent="PipeNode/Pipes"]
position = Vector2( 0, -200 )
scale = Vector2( 2, 20 )
shape = SubResource( 1 )

[node name="DownPipeSprite" type="Sprite" parent="PipeNode/Pipes"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
texture = ExtResource( 3 )

[node name="DownPipeColl" type="CollisionShape2D" parent="PipeNode/Pipes"]
position = Vector2( 0, 200 )
scale = Vector2( 2, 20 )
shape = SubResource( 1 )

[node name="ScoreZone" type="Area2D" parent="PipeNode/Pipes"]
position = Vector2( 12, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PipeNode/Pipes/ScoreZone"]
shape = SubResource( 2 )

[node name="PlayerNode" type="Node2D" parent="."]
position = Vector2( 400, 280 )

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 3 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 6 )

[node name="DeleteZone" type="Area2D" parent="PlayerNode/Player"]
position = Vector2( -264, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/DeleteZone"]
position = Vector2( 0, 16 )
shape = SubResource( 3 )

[node name="SpawnZone" type="Area2D" parent="PlayerNode/Player"]
position = Vector2( 240, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/SpawnZone"]
shape = SubResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 304.0
margin_top = 168.0
margin_right = 336.0
margin_bottom = 192.0

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.258824, 0.494118, 0.172549, 1 )
position = Vector2( -2240, 32 )
scale = Vector2( 200, 200 )
z_index = -5
texture = ExtResource( 3 )

[node name="KillBox" type="Node2D" parent="."]
position = Vector2( 168, 504 )
__meta__ = {
"_edit_group_": true
}

[node name="KillZone" type="Area2D" parent="KillBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox/KillZone"]
position = Vector2( 247, 0 )
shape = SubResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 280 )
offset = Vector2( 160, 0 )
current = true
zoom = Vector2( 0.6, 0.6 )

[node name="Spawnpoint" type="Position2D" parent="."]
position = Vector2( 1008, 288 )

[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/DeleteZone" to="PlayerNode/Player" method="_on_DeleteZone_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/SpawnZone" to="PlayerNode/Player" method="_on_SpawnZone_body_entered"]
